--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 ﻿{
-  "name": "codex-deriv-starter",
+  "name": "deriv-ai-bot",
   "version": "1.0.0",
-  "private": true,
-  "type": "module",
+  "description": "Low-latency Deriv AI trading bot",
+  "main": "server.js",
   "scripts": {
-    "dev": "npx http-server ./src -p 8080 -a 127.0.0.1 -c-1",
-    "lint": "node -e \"console.log('lint ok')\"",
-    "test": "node test/test.js",
-    "build": "echo 'No build step (static HTML)'"
+    "start": "node server.js",
+    "dev": "npm start"
   },
-  "devDependencies": {
-    "http-server": "^14.1.1"
+  "dependencies": {
+    "express": "^4.18.2",
+    "ws": "^8.14.2",
+    "http-proxy-middleware": "^2.0.6"
   }
 }
